After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 753663 - [PATCH] libnm,vpn-service-plugin: emit signals also for the dbus skeleton
[PATCH] libnm,vpn-service-plugin: emit signals also for the dbus skeleton
Status: RESOLVED FIXED
Product: NetworkManager
Classification: Platform
Component: VPN (general)
git master
Other Linux
: Normal normal
: ---
Assigned To: NetworkManager maintainer(s)
NetworkManager maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-08-15 18:20 UTC by Lubomir Rintel
Modified: 2015-08-19 16:44 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
[PATCH] libnm,vpn-service-plugin: emit signals also for the dbus skeleton (3.34 KB, text/plain)
2015-08-15 18:20 UTC, Lubomir Rintel
Details

Description Lubomir Rintel 2015-08-15 18:20:34 UTC
Created attachment 309333 [details]
[PATCH] libnm,vpn-service-plugin: emit signals also for the dbus skeleton

Otherwise the DBus signals are not emitted and the daemon never learns about the events.