libnm,vpn-service-plugin: emit signals also for the dbus skeleton

Otherwise they won't just reach the bus.

https://bugzilla.gnome.org/show_bug.cgi?id=753663